--- a/src/public/css/backend/backend.css
+++ b/src/public/css/backend/backend.css
@@ -8837,7 +8837,7 @@ fieldset:disabled .btn {
 
 .bg-danger {
     --bs-bg-opacity: 1;
-    background-color: rgba(var(--bs-danger-rgb), var(--bs-bg-opacity)) !important;
+    /*background-color: rgba(var(--bs-danger-rgb), var(--bs-bg-opacity)) !important; */
 }
 
 .bg-light {
